[gd_scene load_steps=11 format=3 uid="uid://bmw7a0sfnh82u"]

[ext_resource type="Resource" uid="uid://35mhd3dwxeqw" path="res://resources/BirdOfPrey_enemy.tres" id="1_07t6s"]
[ext_resource type="Script" path="res://scripts/EnemyCharacter.gd" id="1_vetd3"]
[ext_resource type="Texture2D" uid="uid://sowgidw2rexp" path="res://assets/textures/ships/birdofprey.png" id="2_8kfpk"]
[ext_resource type="Shape2D" uid="uid://b6t3xhqgvnnmi" path="res://resources/birdofpreycollision.tres" id="3_7xllj"]
[ext_resource type="AudioStream" uid="uid://dc62llqhpjqpb" path="res://assets/audio/smallexplosion3.mp3" id="3_bqw1s"]
[ext_resource type="PackedScene" uid="uid://b22yde5yoq56c" path="res://scenes/enemyShield.tscn" id="3_sf3xf"]
[ext_resource type="AudioStream" uid="uid://h3r4leshlkvg" path="res://assets/audio/ship_idle.mp3" id="7_5l27p"]
[ext_resource type="AudioStream" uid="uid://7nx4uro3xi5g" path="res://assets/audio/torpedo_light.mp3" id="8_3ajvl"]
[ext_resource type="AudioStream" uid="uid://0oa411kw2o1a" path="res://assets/audio/torpedo_heavy.ogg" id="9_sscoc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ugric"]
radius = 1250.0

[node name="EnemyCharacter" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_vetd3")
enemy_data = ExtResource("1_07t6s")

[node name="AgroBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroBox"]
shape = SubResource("CircleShape2D_ugric")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_8kfpk")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy_hitbox"]]
collision_layer = 128
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = ExtResource("3_7xllj")

[node name="WorldCollisionShape" type="CollisionShape2D" parent="."]
shape = ExtResource("3_7xllj")

[node name="enemyShield" parent="." instance=ExtResource("3_sf3xf")]

[node name="Sounds" type="Node2D" parent="."]

[node name="TorpedoHit" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_bqw1s")
volume_db = -20.0
pitch_scale = 2.0
max_distance = 3000.0
attenuation = 0.615573
bus = &"Characters"

[node name="ship_idle" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("7_5l27p")
volume_db = -25.0
max_distance = 3000.0
attenuation = 0.615573
bus = &"Characters"

[node name="LightTorpedo" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("8_3ajvl")
volume_db = -20.0
max_distance = 3000.0
attenuation = 0.615573
bus = &"Characters"

[node name="HeavyTorpedo" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("9_sscoc")
volume_db = -10.0
max_distance = 3000.0
attenuation = 0.615573
bus = &"Characters"

[connection signal="area_entered" from="AgroBox" to="." method="_on_agro_box_area_entered"]
[connection signal="area_exited" from="AgroBox" to="." method="_on_agro_box_area_exited"]
[connection signal="body_entered" from="AgroBox" to="." method="_on_agro_box_body_entered"]
[connection signal="body_exited" from="AgroBox" to="." method="_on_agro_box_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
